# Pi3Net

./: README.md
firmware/: README.md
firmware/src/: CMakeLists.txt  pi3net.c  pi3net.h  pi3net.pio
hardware/: .gitignore  README.md
hardware/board1/: board1.kicad_pcb  board1.kicad_pro  board1.kicad_sch  fp-lib-table
hardware/pico.pretty/: Pi3Net_logo.kicad_mod  Pi3Net_logo_2.kicad_mod  RaspberryPi_Pico_Debug_THT.kicad_mod
